# hermes-clawchat

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  after-install.md  dev_install.md  install.md  install.sh  package.json  plugin.yaml  pyproject.toml
.e2e/: dev_install.md  images.tsv  local_start_test.sh  npm_start_test.sh
clawchat_gateway/: __init__.py  activate.py  adapter.py  api_client.py  cli.py  commands.py  config.py  connection.py  device_id.py  group_context.py  inbound.py  install.py  plugin_tools.py  protocol.py  runtime_defaults.py  setup.py  storage.py  tools.py  ws_log.py  ws_state.py
docs/: README.md  activate.md  adapter.md  analyze_report.md  api-client.md  architecture.md  clawchat-protocal.md  clawchat-protocol-reference.md  clawchat-protocol.md  cli.md  commands.md  config.md  connection.md  device-id.md  group-context.md  inbound.md  installer.md  media-runtime.md  openclaw-clawchat.md  optimize_plan.md  plugin-entrypoint.md  plugin-tools.md  profile.md  protocol.md  restart.md  runtime-defaults.md  setup.md  skill.md  stream-buffer.md  tests.md  tools.md  ws-log.md  ws-state.md
hermes_deploy_k8s/: dev1_local_start.sh  local_start.sh  namespace.yaml  pod.yaml  start.sh
scripts/: .env.r2.example  clawchat_install_0.12.0.sh  install-package.sh  package_internal.sh
tests/: conftest.py  fake_hermes.py  fake_ws.py  test_activate.py  test_adapter.py  test_api_client.py  test_clawchat_cli.py  test_clawchat_command.py  test_config.py  test_connection.py  test_device_id.py  test_e2e_install_docs.py  test_git_plugin.py  test_group_context.py  test_inbound.py  test_install.py  test_media_runtime.py  test_plugin.py  test_plugin_manifest.py  test_profile.py  test_protocol.py  test_runtime_defaults.py  test_self_echo_hook.py  test_setup.py  test_storage.py  test_tools.py  test_ws_log.py  (+1 more)
(+27 files in other folders)
