[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawchat-gateway"
version = "0.4.1"
description = "ClawChat v2 gateway adapter for hermes-agent"
requires-python = ">=3.11"
dependencies = ["websockets>=12,<16", "PyYAML>=6,<7"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-cov>=4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["clawchat_gateway*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
